# FastAPI-Admin-CLI-Tool

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  setup.py
fact/: cli.py  cli_utils.py
fact/core/management/: __init__.py  base.py
fact/core/management/commands/: startapp.py  startproject.py
fact/templates/app_template/: models.py-tpl  routers.py-tpl  schemas.py-tpl
fact/templates/project_template/: manage.py-tpl
fact/templates/project_template/project_name/: routers.py-tpl  settings.py-tpl
fastapi_admin/: cli.py  cli_utils.py
fastapi_admin/core/database/models/: base.py
fastapi_admin/core/database/schemas/: base.py
fastapi_admin/core/management/: __init__.py  base.py  template.py
fastapi_admin/core/management/commands/: __init__.py  startapp.py  startproject.py
fastapi_admin/project_template/project_name/: routers.py-tpl
fastapi_admin/project_template/project_name/config/: settings.py-tpl
fastapi_admin/templates/app_template/: models.py-tpl
fastapi_admin/templates/app_template/app_name/: schemas.py-tpl
fastapi_admin/templates/project_template/: manage.py-tpl
fastapi_admin/templates/project_template/project_name/: routers.py-tpl
fastapi_admin/templates/project_template/project_name/config/: cli.py-tpl  settings.py-tpl
some/: main.py
