[tool.poetry]
name = "fact"
version = "0.1.0"
description = "A FastAPI-Admin-CLI-Tool"
authors = ["Ahmad Assadi <ds1380ahmad@gmail.com>"]
readme = "README.md"
packages = [
    { include = "fact" }  # Matches the main package folder
]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = { extras = ["standard"], version = "^0.115.6" }
typer = "^0.15.1"
jinja2 = "^3.1.5"
setuptools = "^75.8.0"
sqlmodel = "^0.0.22"
asyncpg = "^0.30.0"
jose = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
fact = "fact.cli:main"
